# orchard

./: .editorconfig  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  PUSH_READINESS.md  REPOSITORY_SETUP.md  SECURITY.md  dependabot.yml  labeler.yml  labels.yml  markdown-link-check-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  deploy-website.yml  fruti-compiler.yml  labeler.yml  link-checker.yml  release.yml  stale.yml  static.yml  welcome.yml
docs/: PHASE-1-COMPLETE.md  README.md
docs/aero/: Aero-OS-Technical-Spec.md
docs/archive/: Aero - Operating System.txt  FINAL-REALITY-VALIDATION.md  Fruti - Programming Examples.txt  Fruti - Programming Language.txt  MONOREPO-RESTRUCTURE.md  PHASE-1-COMPLETE.md  README.md  REALITY-CHECK.md  WORKSPACE-CLEANUP.md
docs/archive/reference-materials/: 5 Tips for Production Code Readiness.txt  Language Evaluation Criteria.txt
docs/fruti/: Language-Design-Decisions.md
docs/fruti/examples/: README.md  cli-tool.fruti  concurrent-downloader.fruti  data-processing.fruti  systems-programming.fruti  web-server.fruti
docs/project/management/: PHASE-1-MVP-COMPLETE.md  README.md
docs/resources/: README.md
docs/resources/os/: System Readiness Checklist.txt  (+3 more)
examples/: README.md  basic-features.fruti  hello-world.fruti
tools/: README.md  build.ps1  test.ps1  verify-pre-push.ps1
website/: README.md  index.html
(+9 files in other folders)
